# crazyflie_online_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: HoverController.cfg
launch/: FTL_matlab.launch  hover_crazyflie.launch  square_matlab.launch  test.launch
msg/: CommandCF.msg  CrazyflieState.msg  Mode.msg  SetpointHL.msg  TargetState.msg
src/crazyfile_online_tracker/: FTL_controller.py  actuator.py  controller.py  crazyflie_actuator.py  crazyflie_connection_helper.py  crazyflie_state_estimator.py  get_CL_model.m  hover_controller.py  matlab_simulator.m  plot_trajectory.m  square_controller.py  state_estimator.py  target_state_estimator.py
src/crazyfile_online_tracker/matlab_simulator/: create_custom_rosmsg.m  exercise02_get_crazyflie_inner_controller.m  matlab_simulator.m  nonlinear_model.slx  nonlinear_model_setup.m  plot_trajectory.m
