<package format="2">
  <name>crazyflie_online_tracker</name>
  <version>1.0.0</version>
  <description>
  This package controls a quadrotor to track a target with online learning algorithm.
  </description>
  <maintainer email="yuesli@student.ethz.ch">Yueshan Li</maintainer>
  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
